src/ui/snapshots/coxtop__form_initiative__tests__the_edit_initiative_form.snap
---
source: src/form_initiative.rs
assertion_line: 344
expression: draw(&form)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌Edit initiative p2-x──────────────────────────────────────────┐        "
"        │ > repo   coxtop  [coxtop]                                    │        "
"        │   title  Old title                                           │        "
"        │   body   old body  (8 chars)                                 │        "
"        │                                                              │        "
"        │ Tab next  Enter confirm  Esc cancel                          │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
