src/ui/snapshots/coxtop__form_initiative__tests__the_new_initiative_form.snap
---
source: src/form_initiative.rs
assertion_line: 336
expression: draw(&form)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌New initiative────────────────────────────────────────────────┐        "
"        │ > repo   coxtop  [coxtop/pat-skills]                         │        "
"        │   title                                                      │        "
"        │   body     (0 chars)                                         │        "
"        │                                                              │        "
"        │ Tab next  Enter confirm  Esc cancel                          │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
