src/ui/snapshots/coxtop__form_initiative__tests__the_remove_initiative_form.snap
---
source: src/form_initiative.rs
assertion_line: 352
expression: draw(&form)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌Remove initiative p2-x────────────────────────────────────────┐        "
"        │ > reason                                                     │        "
"        │                                                              │        "
"        │ Tab next  Enter confirm  Esc cancel                          │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
